<resources>
    <string name="disable_cfb_forbidden">Your service provider does not support disabling call forwarding when your phone is busy.</string>
    <string name="disable_cfnry_forbidden">"Your service provider does not support disabling call forwarding when your phone doesn't answer."</string>
    <string name="disable_cfnrc_forbidden">Your service provider does not support disabling call forwarding when your phone is unreachable.</string>
    <string name="clh_add_vm_number_str_txt">Add number</string>
    <string name="clh_no_vm_number_msg_txt">No voicemail number is saved on the SIM card.</string>
    <string name="clh_no_vm_number_txt">Missing voicemail number</string>
    <string name="clh_vm_show_in_call_log_txt">Show voicemails in call log</string>
    <string name="clh_vm_name_in_call_log_txt">Voicemail name in call log</string>
    <string name="clh_vm_name_dialog_title_txt">Voicemail name</string>
    <string name="clh_vm_name_explanation_txt">Set voicemail name to be displayed in call log</string>
    <string name="clh_vm_received_number_txt">Received voicemail number</string>
    <string name="clh_vm_received_number_dialog_title_txt">Received number</string>
    <string name="clh_vm_received_number_explanation_txt">Set the number to be displayed for received voicemail messages</string>
    <string name="clh_busy_tone_sent_txt">Busy tone sent</string>
    <string name="clh_call_ending_call_txt">Ending call...</string>
    <string name="clh_call_on_hold_txt">On hold</string>
    <string name="clh_call_waiting_answer_txt">Answer</string>
    <string name="clh_call_waiting_info_txt">Call waiting</string>
    <string name="clh_call_waiting_reject_txt">Busy</string>
    <string name="clh_call_waiting_replace_txt">Replace</string>
    <string name="clh_end_held_call_txt">End held call</string>
    <string name="clh_callFailed_cb_enabled_txt">You cannot make outgoing calls while call blocking is on.</string>
    <string name="clh_callFailed_congestion_txt">Network busy</string>
    <string name="clh_callFailed_dsac_restricted_emergency_txt">Emergency calls are restricted by access control.</string>
    <string name="clh_callFailed_dsac_restricted_normal_txt">Normal calls are restricted by access control.</string>
    <string name="clh_callFailed_dsac_restricted_txt">Calls are restricted by access control</string>
    <string name="clh_callFailed_fdn_only_txt">Outgoing calls are restricted by FDN</string>
    <string name="clh_callFailed_imei_not_accepted_txt">Call Failed. Error code: MM #5</string>
    <string name="clh_callFailed_imsi_unknown_vlr_txt">Call failed, IMSI unknown in VLR. Error code: MM #4</string>
    <string name="clh_callFailed_limitExceeded_txt">No money left on prepaid card</string>
    <string name="clh_callFailed_noSignal_txt">No network</string>
    <string name="clh_callFailed_outOfService_txt">Out of service area</string>
    <string name="clh_callFailed_carrier_invalid_sim_card_txt">Invalid SIM card</string>
    <string name="clh_callFailed_powerOff_txt">Radio off</string>
    <string name="clh_callFailed_simError_txt">No SIM card or SIM card error</string>
    <string name="clh_callFailed_userBusy_txt">Line busy</string>
    <string name="clh_card_title_call_ended_txt">Call ended</string>
    <string name="clh_callFailed_unassigned_number_txt">Unassigned (unallocated) number</string>
    <string name="clh_callFailed_no_route_to_destination_txt">No route to destination</string>
    <string name="clh_callFailed_channel_unacceptable_txt">Channel unacceptable</string>
    <string name="clh_callFailed_operator_determined_barring_txt">Operator determined barring</string>
    <string name="clh_callFailed_normal_call_clearing_txt">Normal call clearing</string>
    <string name="clh_callFailed_user_busy_txt">User busy</string>
    <string name="clh_callFailed_no_user_responding_txt">No user responding</string>
    <string name="clh_callFailed_user_alerting_txt">User alerting, no answer</string>
    <string name="clh_callFailed_call_rejected_txt">Call rejected</string>
    <string name="clh_callFailed_number_changed_txt">Number changed</string>
    <string name="clh_callFailed_pre_emption_txt">Pre-emption</string>
    <string name="clh_callFailed_non_selected_user_clearing_txt">Non selected user clearing</string>
    <string name="clh_callFailed_destination_out_of_order_txt">Destination out of order</string>
    <string name="clh_callFailed_invalid_number_format_txt">Invalid number format (incomplete number)</string>
    <string name="clh_callFailed_facility_rejected_txt">Facility rejected</string>
    <string name="clh_callFailed_response_to_STATUS_ENQUIRY_txt">Response to STATUS ENQUIRY</string>
    <string name="clh_callFailed_normal_unspecified_txt">Normal, unspecified</string>
    <string name="clh_callFailed_no_circuit_available_txt">No circuit/channel available</string>
    <string name="clh_callFailed_network_out_of_order_txt">Network out of order</string>
    <string name="clh_callFailed_temporary_failure_txt">Temporary failure</string>
    <string name="clh_callFailed_switching_equipment_congestion_txt">Switching equipment congestion</string>
    <string name="clh_callFailed_access_information_discarded_txt">Access information discarded</string>
    <string name="clh_callFailed_requested_circuit_txt">Requested circuit/channel not available</string>
    <string name="clh_callFailed_resources_unavailable_unspecified_txt">Resources unavailable, unspecified</string>
    <string name="clh_callFailed_quality_of_service_unavailable_txt">Quality of service unavailable</string>
    <string name="clh_sound_menu_handset_earpiece_txt">Handset earpiece</string>
    <string name="clh_sound_menu_bluetooth_txt">Bluetooth device</string>
    <string name="use_3g_only_txt">Use only 3G networks</string>
    <string name="use_3g_only_summary_txt">Disables access to 2G networks</string>
    <string name="volte_toggle_title">Enable VoLTE</string>
    <string name="clh_large_button_panel_call_txt">Call</string>
    <string name="clh_large_icbp_speaker_txt">Speaker</string>
    <string name="increasing_ringtone_title">Increasing ringtone</string>
    <string name="call_barring_settings">Call blocking settings</string>
    <string name="messageCallBarring">Enter password</string>
    <string name="sum_call_barring_enabled">Enabled</string>
    <string name="sum_call_barring_disabled">Disabled</string>
    <string name="call_barring_baoc">All outgoing</string>
    <string name="call_barring_baoic">Outgoing international</string>
    <string name="call_barring_baoicr">Outgoing international roaming</string>
    <string name="call_barring_baic">All incoming</string>
    <string name="call_barring_baicr">Incoming international roaming</string>
    <string name="call_barring_deactivate_all">Deactivate all</string>
    <string name="call_barring_deactivate_all_description">Deactivate all call blocking settings</string>
    <string name="call_barring_change_pwd">Change password</string>
    <string name="call_barring_change_pwd_description">Change call blocking password</string>
    <string name="reject_with_message_preset_1_txt">"I'm busy. I'll call you back later."</string>
    <string name="reject_with_message_preset_2_txt">"I'm on another phone call. I'll call you back later."</string>
    <string name="reject_with_message_preset_3_txt">"I'm in a meeting. I'll call you back later."</string>
    <string name="reject_with_message_preset_4_txt">"I'm driving. I'll call you back later."</string>
    <string name="reject_with_message_preset_5_txt">"I can't talk now. Please send me a message."</string>
    <string name="reject_with_message_preset_6_txt">"I'm eating. I'll call you back later."</string>
    <string name="reject_with_message_setttings_txt">Reject call with message</string>
    <string name="reject_with_message_settings_description_txt">Manage reject messages for incoming calls</string>
    <string name="reject_with_message_edit_title_txt">Edit message</string>
    <string name="incall_screen_dialer_pad_backspace_txt">Backspace</string>
    <string name="phone_strings_ans_mach_app_name_txt">Answering Machine</string>
    <string name="phone_strings_ans_mach_enable_answering_machine_title_txt">Answering Machine</string>
    <string name="phone_strings_ans_mach_greetings_title_txt">Greetings</string>
    <string name="phone_strings_ans_mach_incoming_message_title_txt">Messages</string>
    <string name="phone_strings_ans_mach_auto_answer_time_title_txt">Pick up after</string>
    <string name="reject_with_message_settings_title_txt">Edit messages</string>
    <string name="enhanced_call_features_title">Enhanced call features</string>
    <string name="phone_strings_ans_mach_roaming_title_txt">Use while roaming</string>
    <string name="phone_strings_ans_mach_roaming_sub_txt">Use Answering Machine when traveling abroad</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="voicemail">Voicemail</string>
    <string name="networks">Service providers</string>
    <string name="call_settings">Call settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="sum_carrier_select">Select a service provider</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="data_enabled">Mobile data traffic</string>
    <string name="data_enable_summary">Enable data traffic via mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="prefer_2g">Use only 2G networks</string>
    <string name="prefer_2g_summary">Saves battery</string>
    <string name="fdn">Fixed dialing numbers</string>
    <string name="sum_fdn">Manage fixed dialing numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Enable Auto Retry mode</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="save">Save</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Notification sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="vibrate_on_ring_title">Vibrate when ringing</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="preference_category_ringtone">Ringtone &amp; Vibration</string>
    <string name="description_dial_button">Dial</string>
</resources>