<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceCategory android:persistent="false" android:title="@string/preference_category_ringtone" android:key="button_ringtone_category_key">
        <com.android.phone.DefaultRingtonePreference android:persistent="false" android:title="@string/ringtone_title" android:key="button_ringtone_key" android:dialogTitle="@string/ringtone_title" android:ringtoneType="ringtone" />
        <CheckBoxPreference android:persistent="false" android:title="@string/vibrate_on_ring_title" android:key="button_vibrate_on_ring" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="false" android:title="@string/increasing_ringtone_title" android:key="button_increasing_ringtone" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/other_settings" android:key="button_misc_category_key" />
    <PreferenceScreen android:persistent="false" android:title="@string/enhanced_call_features_title" android:key="button_enhanced_call_features_key">
        <intent android:targetPackage="com.sonymobile.imscp.settings" android:action="android.intent.action.MAIN" android:targetClass="com.sonymobile.imscp.settings.SettingsActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/voicemail" android:key="button_voicemail_category_key">
        <ListPreference android:persistent="true" android:title="@string/voicemail_provider" android:key="button_voicemail_provider_key" android:summary="@string/sum_voicemail_choose_provider" android:defaultValue="" />
        <PreferenceScreen android:persistent="false" android:title="@string/voicemail_settings" android:key="button_voicemail_setting_key">
            <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/voicemail_settings_number_label" android:key="button_voicemail_key" android:dialogTitle="@string/voicemail" phone:confirmMode="confirm" />
            <CheckBoxPreference android:persistent="false" android:title="@string/clh_vm_show_in_call_log_txt" android:key="button_vm_show_in_call_log" />
            <EditTextPreference android:singleLine="true" android:title="@string/clh_vm_name_in_call_log_txt" android:key="button_vm_name_in_call_log" android:dialogTitle="@string/clh_vm_name_dialog_title_txt" android:inputType="text" />
            <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="false" android:autoText="false" android:title="@string/clh_vm_received_number_txt" android:key="button_vm_received_number" android:dialogTitle="@string/clh_vm_received_number_dialog_title_txt" phone:confirmMode="confirm" />
        </PreferenceScreen>
        <RingtonePreference android:persistent="true" android:title="@string/voicemail_notification_ringtone_title" android:key="button_voicemail_notification_ringtone_key" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" />
        <CheckBoxPreference android:persistent="true" android:title="@string/voicemail_notification_vibrate_when_title" android:key="button_voicemail_notification_vibrate_key" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="false" android:title="@string/volte_toggle_title" android:key="button_volte" android:defaultValue="false" />
    <CheckBoxPreference android:persistent="false" android:title="@string/dtmf_tone_enable_title" android:key="button_play_dtmf_tone" android:defaultValue="true" />
    <PreferenceScreen android:persistent="false" android:title="@string/phone_strings_ans_mach_app_name_txt" android:key="button_answering_machine" />
    <PreferenceScreen android:persistent="false" android:title="@string/reject_with_message_setttings_txt" android:key="button_reject_call_with_msg_key" android:summary="@string/reject_with_message_settings_description_txt">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.SomcRejectMsgSetting" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn_key" android:summary="@string/sum_fdn">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.FdnSetting" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="false" android:title="@string/auto_retry_mode_title" android:key="button_auto_retry_key" android:summary="@string/auto_retry_mode_summary" />
    <ListPreference android:persistent="false" android:entries="@array/tty_mode_entries" android:title="@string/tty_mode_option_title" android:key="button_tty_mode_key" android:summary="@string/tty_mode_option_summary" android:entryValues="@array/tty_mode_values" />
    <CheckBoxPreference android:persistent="true" android:title="@string/hac_mode_title" android:key="button_hac_key" android:summary="@string/hac_mode_summary" />
    <ListPreference android:entries="@array/dtmf_tone_entries" android:title="@string/dtmf_tones_title" android:key="button_dtmf_settings" android:summary="@string/dtmf_tones_summary" android:entryValues="@array/dtmf_tone_values" />
    <PreferenceScreen android:persistent="false" android:title="@string/labelGSMMore" android:key="button_gsm_more_expand_key" android:summary="@string/sum_gsm_call_settings">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCDMAMore" android:key="button_cdma_more_expand_key" android:summary="@string/sum_cdma_call_settings">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CdmaCallOptions" />
    </PreferenceScreen>
</PreferenceScreen>