<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_barring_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <com.android.phone.CallBarringEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/call_barring_baoc" android:key="button_baoc_key" android:summaryOn="@string/sum_call_barring_enabled" android:summaryOff="@string/sum_call_barring_disabled" android:dialogTitle="@string/call_barring_baoc" android:dialogMessage="@string/messageCallBarring" phone:confirmMode="confirm" phone:facility="AO" phone:serviceClass="voice" />
    <com.android.phone.CallBarringEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/call_barring_baoic" android:key="button_baoic_key" android:dependency="button_baoc_key" android:summaryOn="@string/sum_call_barring_enabled" android:summaryOff="@string/sum_call_barring_disabled" android:dialogTitle="@string/call_barring_baoic" android:dialogMessage="@string/messageCallBarring" phone:confirmMode="activation" phone:facility="OI" phone:serviceClass="voice" />
    <com.android.phone.CallBarringEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/call_barring_baoicr" android:key="button_baoicxh_key" android:dependency="button_baoc_key" android:summaryOn="@string/sum_call_barring_enabled" android:summaryOff="@string/sum_call_barring_disabled" android:dialogTitle="@string/call_barring_baoicr" android:dialogMessage="@string/messageCallBarring" phone:confirmMode="activation" phone:facility="OX" phone:serviceClass="voice" />
    <com.android.phone.CallBarringEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/call_barring_baic" android:key="button_baic_key" android:summaryOn="@string/sum_call_barring_enabled" android:summaryOff="@string/sum_call_barring_disabled" android:dialogTitle="@string/call_barring_baic" android:dialogMessage="@string/messageCallBarring" phone:confirmMode="activation" phone:facility="AI" phone:serviceClass="voice" />
    <com.android.phone.CallBarringEditPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/call_barring_baicr" android:key="button_baicr_key" android:dependency="button_baic_key" android:summaryOn="@string/sum_call_barring_enabled" android:summaryOff="@string/sum_call_barring_disabled" android:dialogTitle="@string/call_barring_baicr" android:dialogMessage="@string/messageCallBarring" phone:confirmMode="activation" phone:facility="IR" phone:serviceClass="voice" />
    <com.android.phone.EditPinPreference android:persistent="false" android:title="@string/call_barring_deactivate_all" android:key="button_ba_all_key" android:summary="@string/call_barring_deactivate_all_description" android:dialogTitle="@string/call_barring_deactivate_all" android:dialogMessage="@string/messageCallBarring" />
    <com.android.phone.EditPinPreference android:persistent="false" android:title="@string/call_barring_change_pwd" android:key="button_change_pw_key" android:summary="@string/call_barring_change_pwd_description" android:dialogTitle="@string/call_barring_change_pwd" />
</PreferenceScreen>