<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bluetoothAndSpeaker" android:background="#99000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/incall_screen_route_sound_popup_text_size" android:gravity="center_vertical" android:id="@id/speakerButtonText" android:background="@drawable/somc_incallscreen_route_sound_popupdialog" android:focusable="true" android:clickable="true" android:layout_width="@dimen/incall_screen_route_sound_popup_row_width" android:layout_height="@dimen/incall_screen_route_sound_popup_row_height" android:text="@string/clh_large_icbp_speaker_txt" android:paddingStart="@dimen/incall_screen_route_sound_popup_row_padding_start" android:paddingEnd="@dimen/incall_screen_route_sound_popup_row_padding_end" />
    <ImageView android:background="@drawable/somc_incallscreen_popupdailog_divider" android:layout_width="@dimen/incall_screen_route_sound_popup_row_width" android:layout_height="@dimen/incall_screen_route_sound_popup_divider_height" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/incall_screen_route_sound_popup_text_size" android:gravity="center_vertical" android:id="@id/normalButtonText" android:background="@drawable/somc_incallscreen_route_sound_popupdialog" android:focusable="true" android:clickable="true" android:layout_width="@dimen/incall_screen_route_sound_popup_row_width" android:layout_height="@dimen/incall_screen_route_sound_popup_row_height" android:text="@string/clh_sound_menu_handset_earpiece_txt" android:paddingStart="@dimen/incall_screen_route_sound_popup_row_padding_start" android:paddingEnd="@dimen/incall_screen_route_sound_popup_row_padding_end" />
    <ImageView android:background="@drawable/somc_incallscreen_popupdailog_divider" android:layout_width="@dimen/incall_screen_route_sound_popup_row_width" android:layout_height="@dimen/incall_screen_route_sound_popup_divider_height" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/incall_screen_route_sound_popup_text_size" android:gravity="center_vertical" android:id="@id/bluetoothButtonText" android:background="@drawable/somc_incallscreen_route_sound_popupdialog" android:focusable="true" android:clickable="true" android:layout_width="@dimen/incall_screen_route_sound_popup_row_width" android:layout_height="@dimen/incall_screen_route_sound_popup_row_height" android:text="@string/clh_sound_menu_bluetooth_txt" android:paddingStart="@dimen/incall_screen_route_sound_popup_row_padding_start" android:paddingEnd="@dimen/incall_screen_route_sound_popup_row_padding_end" />
</LinearLayout>