<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/emergency_dialer" android:paddingTop="@dimen/emergency_dialpad_padding_top" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/emergencyDialerField" android:background="@drawable/dial_input_bg_dark" android:focusable="true" android:nextFocusRight="@id/backspaceimg" android:layout_width="fill_parent" android:layout_height="@dimen/emergency_dialpad_input_height">
        <view android:textSize="@dimen/emergency_dialpad_input_text_size" android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:id="@id/emergencyDialerFieldDigits" android:background="@android:color/transparent" android:clickable="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:scrollHorizontally="true" android:layout_weight="1.0" android:inputType="phone" android:layout_marginStart="@dimen/emergency_dialpad_input_margin_start" android:layout_marginEnd="@dimen/emergency_dialpad_input_margin_end" class="com.android.phone.SomcEditText" />
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/backspaceimg" android:background="@android:color/transparent" android:nextFocusLeft="@id/emergencyDialerField" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_delete_phone_number_large_dark" android:contentDescription="@string/incall_screen_dialer_pad_backspace_txt" android:layout_marginEnd="@dimen/emergency_dialpad_backspace_img_margin_end" />
    </LinearLayout>
    <include android:id="@id/dialpad" layout="@layout/somc_dialpad_emergency" />
    <RelativeLayout android:id="@id/dialPadGreen" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/emergency_dialpad_green_margin_top" android:contentDescription="@string/description_dial_button" android:layoutDirection="locale" android:layout_marginStart="@dimen/emergency_dialpad_green_margin_left" android:layout_marginEnd="@dimen/emergency_dialpad_green_margin_right" style="@android:style/Widget.DeviceDefault.Button">
        <TextView android:textSize="@dimen/emergency_dialpad_green_text_size" android:textColor="@color/somc_primary_text" android:id="@id/dialPadGreenText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clh_large_button_panel_call_txt" android:layout_centerInParent="true" />
        <ImageView android:id="@id/dialPadGreenIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/clh_large_icbp_button_call" android:layout_centerVertical="true" android:layout_marginEnd="7.0dip" android:layout_toStartOf="@id/dialPadGreenText" />
    </RelativeLayout>
</LinearLayout>